z-index fixing

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,6 @@
     .sidebar {
         position: sticky;
         top: 0;
-        z-index: 15;
+        z-index: 401;
     }
 }
